external-crates/move/crates/move-compiler/tests/development/enums/typing/mut_ref_match.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/typing/mut_ref_match.move:2:17
  │
2 │     public enum X {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

warning[W09012]: unused 'mut' modifiers
  ┌─ tests/development/enums/typing/mut_ref_match.move:9:22
  │
9 │             X::A(mut a) => {
  │                  --- ^ The variable 'a' is never used mutably
  │                  │    
  │                  Consider removing the 'mut' declaration here
  │
  = This warning can be suppressed with '#[allow(unused_let_mut)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

